# nlp_lss_2023

./: .gitignore  shell.nix
homework/: .gitignore  README.md  homework_01.ipynb  homework_02.ipynb  pyproject.toml  shell.nix  start_kernel.sh
