[tool.poetry]
authors = ["markbeep <mrkswrn@gmail.com>"]
description = ""
name = "homework"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.2"
d = "^0.2.2"
eli5 = "^0.13.0"
fightin-words = "^1.0.5"
flair = "^0.11.3"
gensim = "^4.3.0"
googletrans = "^3.0.0"
hdbscan = "^0.8.29"
ipykernel = "^6.21.2"
keras = "^2.11.0"
lxml = "^4.9.2"
matplotlib = "^3.7.0"
nltk = "^3.8.1"
pandas = "^1.5.3"
pydot = "^1.4.2"
pyldavis = "^3.4.0"
python = "~3.9"
scikit-learn-extra = "^0.2.0"
seaborn = "^0.12.2"
sentencepiece = "0.1.95"
sklearn = "^0.0.post1"
spacy = "^3.5.0"
spacytextblob = "^4.0.0"
tensorflow = "^2.11.0"
tqdm = "^4.64.1"
transformers = {extras = ["torch"], version = "^4.26.1"}
unidecode = "^1.3.6"
wordcloud = "^1.8.2.2"
nbconvert = "^7.2.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
poethepoet = "^0.18.1"
pylint = "^2.16.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poe.tasks]
ipy = "python3 -m ipykernel install --user --name=projectname"
setup = ["spacy", "wordnet", "stopwords", "vader"]
spacy = "python -m spacy download en_core_web_sm"
stopwords = """python -c "import nltk; nltk.download('stopwords')" """
vader = """python -c "import nltk; nltk.download('vader_lexicon')" """
wordnet = """python -c "import nltk; nltk.download('wordnet')" """
